--- a/views/index.html
+++ b/views/index.html
@@ -15,31 +15,35 @@
     <link rel="stylesheet" href="../assets/css/fontawesome.min.css">
 </head>
 
-<body>
+<body class="">
     <header class="">
-        <navbar class="nav d-flex justify-content-between p-3 ">
+        <navbar class="nav d-flex justify-content-around p-3 ">
             <div class="navbar-brand font-weight-bolder p-3 ml-3">
-                <a href="#" rel="noopener noreferrer"
-                    class="d-inline-block font-weight-bolder text-center text-white">Travel <span
-                        class=" text-danger">and Enjoy</span></a>
+                <a href="#home" rel="noopener noreferrer"
+                    class="d-inline-block font-weight-bolder text-center text-white">Travel 
+                    <span class=" text-danger">and Enjoy</span>
+                </a>
             </div>
             <div class="nav-item border-bottom-0">
                 <ul class="nav-tabs d-flex flex-row border-bottom-0 mx-2 mb-0 p-2">
-                    <li class="nav-link active"><a href="#home" class="text-white h4 font-weight-bold">Home</a></li>
-                    <li class="nav-link"><a href="#about_us" class="text-white h4 font-weight-bold">About</a></li>
-                    <li class="nav-link"><a href="#services" class="text-white h4 font-weight-bold">Service</a></li>
-                    <li class="nav-link"><a href="#products" class="text-white h4 font-weight-bold">Products</a></li>
-                    <li class="nav-link"><a href="#courses" class="text-white h4 font-weight-bold">Courses</a></li>
-                    <li class="nav-link"><a href="#contact_us" class="text-white h4 font-weight-bold">Contact Us</a></li>
+                    <a href="#home" class="text-white h5 font-weight-bold"><li class="nav-link active">Home</li></a>
+                    <a href="#about_us" class="text-white h5 font-weight-bold"><li class="nav-link">About</li></a>
+                    <a href="#services" class="text-white h5 font-weight-bold"><li class="nav-link">Services</li></a>
+                    <a href="#products" class="text-white h5 font-weight-bold"><li class="nav-link">Products</li></a>
+                    <a href="#courses" class="text-white h5 font-weight-bold"><li class="nav-link">Courses</li></a>
+                    <a href="#contact_us" class="text-white h5 font-weight-bold"><li class="nav-link">Contact Us</li></a>
                 </ul>
+            </div>
+            <div class="toggler">
+                <span></span>
             </div>
         </navbar>
     </header>
     <section class="home" id="home">
         <div class="container">
             <div class="row align-items-center justify-content-center">
-                <div class="col-sm-2"></div>
-                <div class="col-sm-6">
+                
+                <div class="col-sm-10 col-lg-6">
                     <h2>Travel, Enjoy <br> and Live a new and full Life.</h2>
                     <p class="home-info">
                         Lorem, ipsum dolor sit amet consectetur adipisicing elit. Atque, sequi molestias, esse ducimus
@@ -47,7 +51,6 @@
                     </p>
                     <button type="submit" class="mt-3"><a href="http://" type="submit">Explore the Universe</a></button>
                 </div>
-                <div class="col-sm-2"></div>
             </div>
             <div class="row2 bg-success">
                 <div class="more-info">
@@ -424,17 +427,43 @@
 </body>
 <script>
     // navbar scrolling
-    const navbar = document.querySelector('header');
+    const header = document.querySelector('header');
+    const navtabs = document.querySelector('.nav-tabs');
+    const toggle = document.querySelector('.toggler');
+    const body = document.querySelector('body');
 
     window.addEventListener('scroll', () =>{
         let value = window.scrollY;
          if (value > 400) {
-            navbar.classList.add('scrolled');
+            header.classList.add('scrolled');
          }
          else{
-            navbar.classList.remove('scrolled');
+            header.classList.remove('scrolled');
          }
     })
+    toggle.addEventListener('click', (e) =>{
+        toggler();
+        toggleHeader();
+        hideScroll();
+    })
+    function toggler(){
+        toggle.classList.toggle('active');
+    }
+    function toggleHeader() {
+        header.classList.toggle('active');
+    }
+    function hideScroll() {
+        body.classList.toggle('hideScroll');
+    }
+    // close navbar on click
+    navtabs.addEventListener('click', (e) =>{
+    //    console.log(e.target);
+        if (e.target.classList.contains("nav-link") && e.target.hash !== "") {
+            toggleHeader();
+            toggler();
+        }
+    });
+
 </script>
 
 </html>
